code/human_written_tests/WebAssembly/processed_control_flow_validation/test_unreachable_61.wast
(assert_invalid
  (module (func $type-binary-num-vs-void-after-infinite-loop
    (loop (br 0)) (block (drop (f32.eq (i32.const 1))))
  ))
  "type mismatch"
)